Bug 1368080 - Use REFUSED_STREAM instead of INTERNAL_ERROR on duplicate push key. r=mcmanus

MozReview-Commit-ID: BEUo6YpcyZj

--HG--
extra : rebase_source : 7733620d2149bac35201c74ab451ebb292268442